// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Game /> <Game /> history is recorded 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        >
          X
        </button>
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    className="game-info"
  >
    <div>
      Next player: O
    </div>
    <div>
      <button
        onClick={[Function]}
      >
        Toggle Order
      </button>
    </div>
    <ol>
      <li>
        <a
          className=""
          href="#"
          onClick={[Function]}
        >
          Game start
        </a>
      </li>
      <li>
        <a
          className="selected"
          href="#"
          onClick={[Function]}
        >
          Move #1 - (1,1)
        </a>
      </li>
    </ol>
  </div>
</div>
`;

exports[`<Game /> <Game /> history is recorded 2`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        >
          X
        </button>
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        >
          O
        </button>
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    className="game-info"
  >
    <div>
      Next player: X
    </div>
    <div>
      <button
        onClick={[Function]}
      >
        Toggle Order
      </button>
    </div>
    <ol>
      <li>
        <a
          className=""
          href="#"
          onClick={[Function]}
        >
          Game start
        </a>
      </li>
      <li>
        <a
          className=""
          href="#"
          onClick={[Function]}
        >
          Move #1 - (1,1)
        </a>
      </li>
      <li>
        <a
          className="selected"
          href="#"
          onClick={[Function]}
        >
          Move #2 - (3,1)
        </a>
      </li>
    </ol>
  </div>
</div>
`;

exports[`<Game /> renders <Game /> component 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    className="game-info"
  >
    <div>
      Next player: X
    </div>
    <div>
      <button
        onClick={[Function]}
      >
        Toggle Order
      </button>
    </div>
    <ol>
      <li>
        <a
          className="selected"
          href="#"
          onClick={[Function]}
        >
          Game start
        </a>
      </li>
    </ol>
  </div>
</div>
`;
